SEO Keywords Added

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Bloxwich Technologies</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bloxwich Technologies India - Leading manufacturer of air handling units and energy-saving solutions in India. We provide HVAC equipment, industrial air filtration systems, and customized energy management solutions.">
+  <meta name="keywords" content="bloxwich technologies, bloxwiche technologies, bloxwich technologis, bloxwich technology, bloxwich technologies india, bloxwiche technologies india, bloxwich technologis india, bloxwich technology india, air handling units, air handeling units, air handling units india, air handeling units india, energy-saving solutions, energy saving solutions, HVAC equipment manufacturer, HVAC equipment manufactur, industrial air filtration systems, industial air filtration systems, hardware manufacturing, hardware manufacturng, hardware manufacturing india, hardware manufacturng india, energy management solutions, energy managemnt solutions, energy management solutions india, energy managemnt solutions india, industrial equipment supplier, industiral equipment supplier, industrial equipment supplier india, industiral equipment supplier india, customized air handling solutions, customized air handlng solutions, customized air handling solutions india, customized air handlng solutions india, sustainable energy-saving projects, sustinable energy saving projects, sustainable energy-saving projects india, sustinable energy saving projects india">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <title>Bloxwich Technologies India - Air Handling Units and Energy-Saving Solutions</title>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
